--- a/package.json
+++ b/package.json
@@ -14,15 +14,24 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.6",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^7.0.2",
-    "tailwindcss": "^3.4.16"
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "tailwindcss": "^3.4.16",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
